Adapted branch alexander to head branch.